--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/onlineshop?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=admin
+spring.datasource.url=jdbc:mysql://remotemysql.com:3306/bfElcywndZ?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
+spring.datasource.username=bfElcywndZ
+spring.datasource.password=sckMblkcTn
 spring.jpa.hibernate.ddl-auto=create
 spring.datasource.initialization-mode=always
 spring.jpa.show-sql=false
