--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,6 @@ spring.jpa.hibernate.ddl-auto=create
 spring.datasource.initialization-mode=always
 spring.jpa.show-sql=false
 
+
+spring.servlet.multipart.max-file-size=100MB
+spring.servlet.multipart.max-request-size=100MB
