--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,9 @@ spring.datasource.password=admin
 spring.jpa.hibernate.ddl-auto=create
 spring.datasource.initialization-mode=always
 spring.jpa.show-sql=false
+#logging.level.org.springframework.web= DEBUG
 
 
-spring.servlet.multipart.max-file-size=100MB
-spring.servlet.multipart.max-request-size=100MB
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.max-file-size=10MB
+image.upload=src/main/resources/static/images/
