--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,9 @@ spring.jpa.show-sql=false
 #logging.level.org.springframework.web= DEBUG
 
 
+
+server.error.whitelabel.enabled=false
+
 spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=10MB
 image.upload=src/main/resources/static/images/
